modified login/logout
